# glosario

./: .Rbuildignore  .all-contributorsrc  .gitignore  .yamllint.yml  404.html  CODE_OF_CONDUCT.md  CONDUCT.md  CONTRIBUTING.md  DESCRIPTION  GOVERNANCE.md  Gemfile  LICENSE.md  Makefile  NAMESPACE  README.md  _build_netlify.sh  _config.yml  af.md  am.md  ar.md  bn.md  de.md  el.md  en.md  es.md  fr.md  glossary  glossary.yml  he.md  help.md  hr.md  hu.md  id.md  index.html  index.md  it.md  ja.md  ko.md  la.md  nl.md  (+15 more)
R/: define.R  entry.R  glossary.R  (+2 more)
python/: CONDUCT.rst  CONTRIBUTING.rst  CONTRIBUTORS.rst  LICENSE  README.md  pyproject.toml  requirements.txt
python/docs/: Makefile  conf.py  index.rst  make.bat
python/docs/_build/doctrees/: conduct.doctree  contributing.doctree  contributors.doctree  environment.pickle  index.doctree  installation.doctree  usage.doctree
python/docs/_build/doctrees/source/: glossary.doctree  modules.doctree
python/docs/_build/html/: .buildinfo  conduct.html  contributing.html  contributors.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  search.html  searchindex.js  usage.html
python/docs/_build/html/_modules/: index.html
python/docs/_build/html/_sources/: installation.rst.txt  usage.rst.txt
python/docs/_build/html/source/: glossary.html  modules.html
python/docs/source/: glossary.rst  modules.rst
python/glossary/: glossary.py
python/glossary/.github/workflows/: build.yml  release.yml
python/glossary/data/: glossary.yml
python/tests/: test_glossary.py
python/utils/: build-graph.py
(+86 files in other folders)
